2007-06-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/persistence/dbi.scm
	  Fit to 2007-06-19 change.

2007-06-20  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/dbm.scm
	  Modernized.

	* Change: src/kahua/user.scm, test/user.scm
	  Change index "login-name" to unique index slot, and drop definition
	  of "key-of" method on <kahua-user>.  Override method "find-kahua-instance"
	  for <kahua-user> to keep backward compatibility.

	* Change: src/kahua-user.scm
	  Add -p(preserve) option to del sub-command.  It only deactivate user
	  instead of deletion.

2007-06-19  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix&Change: src/kahua/persistence.scm, src/kahua/persistence/efs.scm,
	              src/kahua-server.scm, test/index-slots.scm,
	              test/persistence.scm
	  Improve keeping consistency between index-caches and id-cache.

2007-06-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/config.scm.in, src/kahua-keyserv.scm,
	          src/kahua-spvr.scm, src/kahua-httpd.scm
	  Now kahua-keyserv, kahua-spvr, kahua-httpd support -t(--threads)
	  option that has a argument as size of thread pool, and
	  add :keyserv-concurrency and :httpd-concurrency to config file
	  as well as :spvr-concurrency.

2007-06-07  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/persistence.scm
	  Fix a problem that cannot check or fix efs database.
	  It's embugged at 2007-05-24.

2007-06-02  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-user.scm
	  Replace function names kahua-web-{adduser,deluser,lsuser}
	  with kahua-{adduser,deluser,lsuser}.
	  Command ls's output is now alphabetically sorted.

	* Change: src/kahua/server.scm
	  If a user is deactivated during login, he/she is immediately
	  logout.

2007-05-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* New: src/kahua-user.scm
	  New command-line user(<kahua-user> instances) management
	  tool.  This is imported from kahua-web CVS HEAD(0.3_pre10).
